force-app/main/default/objects/Case/fields/Building_Permit_Status__c.field-meta.xml
<CustomField>
    <fullName>Building_Permit_Status__c</fullName>
    <label>Building Permit Status OLD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>