force-app/main/default/objects/Case/fields/Case_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Case_Resolution__c</fullName>
    <description>Description of the the Case Resolution</description>
    <inlineHelpText>Description of the the Case Resolution</inlineHelpText>
    <label>Case Resolution OLD</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>