force-app/main/default/objects/Case/fields/Case_SubType__c.field-meta.xml
<CustomField>
    <fullName>Case_SubType__c</fullName>
    <label>Case SubType DELETE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Case_Items</valueSetName>
    </valueSet>
</CustomField>