force-app/main/default/objects/Case/fields/Case_SubTypeOLD__c.field-meta.xml
<CustomField>
    <fullName>Case_SubTypeOLD__c</fullName>
    <label>Case SubType DELETE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Replace_Lumon_Case_Sub_Types</valueSetName>
    </valueSet>
</CustomField>