force-app/main/default/objects/Case/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <description>Case Classification to indicate the Type of Issue</description>
    <label>Case Type OLD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Case_Types</valueSetName>
    </valueSet>
</CustomField>