force-app/main/default/objects/Case/fields/CaseCategory__c.field-meta.xml
<CustomField>
    <fullName>CaseCategory__c</fullName>
    <label>Case Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Case_Categories</valueSetName>
    </valueSet>
</CustomField>