force-app/main/default/objects/Case/fields/CaseDetailedDescription__c.field-meta.xml
<CustomField>
    <fullName>CaseDetailedDescription__c</fullName>
    <label>Detailed Description</label>
    <length>130000</length>
    <type>Html</type>
</CustomField>