force-app/main/default/objects/Case/fields/CaseFromEmailToCase__c.field-meta.xml
<CustomField>
    <fullName>CaseFromEmailToCase__c</fullName>
    <description>Indicates if Case was created from Email</description>
    <formula>IF(ISNULL(SourceEmail__c),False,True)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CaseFromEmailToCase</label>
    <type>Checkbox</type>
</CustomField>