force-app/main/default/objects/Case/fields/CaseGroup__c.field-meta.xml
<CustomField>
    <fullName>CaseGroup__c</fullName>
    <description>The Group that is handling the Case</description>
    <inlineHelpText>The Group that is handling the Case</inlineHelpText>
    <label>Case Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Support_Groups</valueSetName>
    </valueSet>
</CustomField>