force-app/main/default/objects/Case/fields/CaseInQueue__c.field-meta.xml
<CustomField>
    <fullName>CaseInQueue__c</fullName>
    <description>Indicates is Case is Owned by a Queue</description>
    <formula>IF(ISBLANK(Owner:Queue.Id),FALSE,TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates if the Case is Assigned to a Queue</inlineHelpText>
    <label>Case In Queue</label>
    <type>Checkbox</type>
</CustomField>