force-app/main/default/objects/Case/fields/CaseProcessStage__c.field-meta.xml
<CustomField>
    <fullName>CaseProcessStage__c</fullName>
    <description>Reclamation order stages are depended on status values.</description>
    <label>Process Stage DELETE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial Stage</fullName>
            </value>
            <value>
                <fullName>Investigation</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>Resolution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>