force-app/main/default/objects/Case/fields/CaseResolvedDate__c.field-meta.xml
<CustomField>
    <fullName>CaseResolvedDate__c</fullName>
    <description>Date/Time when Case Last changed to Resolved (or Closed)</description>
    <label>Case Resolved  Date</label>
    <type>DateTime</type>
</CustomField>