force-app/main/default/objects/Case/fields/CaseResolvedOnTime__c.field-meta.xml
<CustomField>
    <fullName>CaseResolvedOnTime__c</fullName>
    <formula>IF(
    AND(
        NOT(ISBLANK( CaseResolvedDate__c )),
        CaseResolvedDate__c &lt;= SlaDeadline__c
    ),
    TRUE,
    FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Resolved in SLA</label>
    <type>Checkbox</type>
</CustomField>