force-app/main/default/objects/Case/fields/CaseSourceEmailDomain__c.field-meta.xml
<CustomField>
    <fullName>CaseSourceEmailDomain__c</fullName>
    <formula>IF(
    ISBLANK(SuppliedEmail),
    &quot;Other&quot;, 
    IF(
      CONTAINS(SuppliedEmail, &quot;@&quot;),
      MID(SuppliedEmail,FIND(&quot;@&quot;,SuppliedEmail ),LEN(SuppliedEmail)),
      &quot;Unknown&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Source Email Domain</label>
    <type>Text</type>
</CustomField>