force-app/main/default/objects/Case/fields/CaseSubType__c.field-meta.xml
<CustomField>
    <fullName>CaseSubType__c</fullName>
    <label>Case SubType</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CaseType__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Lumon_Case_Items</valueSetName>
    </valueSet>
</CustomField>