force-app/main/default/objects/Case/fields/CaseSubTypeOLD__c.field-meta.xml
<CustomField>
    <fullName>CaseSubTypeOLD__c</fullName>
    <label>Case SubType OLD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Case_Sub_Types</valueSetName>
    </valueSet>
</CustomField>