force-app/main/default/objects/Case/fields/CaseType__c.field-meta.xml
<CustomField>
    <fullName>CaseType__c</fullName>
    <description>Case Classification to indicate the Type of Issue</description>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CaseCategory__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Lumon_Case_Types</valueSetName>
    </valueSet>
</CustomField>