force-app/main/default/objects/Case/fields/Configuration_Product__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the Product within a Configuration Plan.</description>
    <label>Configuration Product DELETE</label>
    <referenceTo>Configuration_Product__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>