force-app/main/default/objects/Case/fields/Contains_Pictures__c.field-meta.xml
<CustomField>
    <fullName>Contains_Pictures__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Filled in by IM / Support when creating the case. Needs to be checked for the work scheduling to be possible.</description>
    <inlineHelpText>Filled in by IM / Support when creating the case. Needs to be checked for the work scheduling to be possible.</inlineHelpText>
    <label>Contains Pictures OLD</label>
    <type>Checkbox</type>
</CustomField>