force-app/main/default/objects/Case/fields/Detailed_Description__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Description__c</fullName>
    <label>Detailed Description DELETE</label>
    <length>130000</length>
    <type>Html</type>
</CustomField>