force-app/main/default/objects/Case/fields/Freshdesk_Id__c.field-meta.xml
<CustomField>
    <fullName>Freshdesk_Id__c</fullName>
    <description>Freshdesk Ticket ID</description>
    <externalId>true</externalId>
    <inlineHelpText>Freshdesk Ticket ID</inlineHelpText>
    <label>Freshdesk Id OLD</label>
    <length>7</length>
    <type>Text</type>
</CustomField>