force-app/main/default/objects/Case/fields/FreshdeskGroup__c.field-meta.xml
<CustomField>
    <fullName>FreshdeskGroup__c</fullName>
    <label>Freshdesk Group</label>
    <length>50</length>
    <type>Text</type>
</CustomField>