force-app/main/default/objects/Case/fields/FreshdeskId__c.field-meta.xml
<CustomField>
    <fullName>FreshdeskId__c</fullName>
    <externalId>true</externalId>
    <label>Freshdesk Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>