force-app/main/default/objects/Case/fields/FreshdeskType__c.field-meta.xml
<CustomField>
    <fullName>FreshdeskType__c</fullName>
    <description>Old Freshdesk Typification for ticket/case</description>
    <inlineHelpText>Old Freshdesk Typification for ticket/case</inlineHelpText>
    <label>Freshdesk Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>