force-app/main/default/objects/Case/fields/isInternal__c.field-meta.xml
<CustomField>
    <fullName>isInternal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isInternal</label>
    <type>Checkbox</type>
</CustomField>