force-app/main/default/objects/Case/fields/isServiceDeskCase__c.field-meta.xml
<CustomField>
    <fullName>isServiceDeskCase__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Case originates from Service Desk eg Printcom</description>
    <label>isServiceDeskCase</label>
    <type>Checkbox</type>
</CustomField>