force-app/main/default/objects/Case/fields/IT_Support_Category__c.field-meta.xml
<CustomField>
    <fullName>IT_Support_Category__c</fullName>
    <label>IT Support Category DELETE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_IT_Support_Category</valueSetName>
    </valueSet>
</CustomField>