force-app/main/default/objects/Case/fields/IT_Support_Type__c.field-meta.xml
<CustomField>
    <fullName>IT_Support_Type__c</fullName>
    <label>IT Support Type DELETE</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>IT_Support_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Lumon_IT_Support_Types</valueSetName>
    </valueSet>
</CustomField>