force-app/main/default/objects/Case/fields/MonthCreated__c.field-meta.xml
<CustomField>
    <fullName>MonthCreated__c</fullName>
    <formula>LPAD(TEXT(MONTH(DATEVALUE(CreatedDate))),2,&quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month Created</label>
    <type>Text</type>
</CustomField>