force-app/main/default/objects/Case/fields/MonthResolved__c.field-meta.xml
<CustomField>
    <fullName>MonthResolved__c</fullName>
    <label>Month Resolved</label>
    <length>10</length>
    <type>Text</type>
</CustomField>