force-app/main/default/objects/Case/fields/myLumonPortal_OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>myLumonPortal_OrderNumber__c</fullName>
    <description>Order number from MyLumon Portal when case is created</description>
    <label>myLumonPortal_OrderNumber OLD</label>
    <length>100</length>
    <type>Text</type>
</CustomField>