force-app/main/default/objects/Case/fields/Name_City_Authority__c.field-meta.xml
<CustomField>
    <fullName>Name_City_Authority__c</fullName>
    <description>This field logs information from the city authority where the Building permit was applied.</description>
    <inlineHelpText>Please provide the name of the city authority where the Building permit was applied.</inlineHelpText>
    <label>Name City Authority DELETE</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>