force-app/main/default/objects/Case/fields/Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner__c</fullName>
    <formula>Opportunity__r.Owner.LastName</formula>
    <label>Opportunity Owner DEL</label>
    <type>Text</type>
</CustomField>