force-app/main/default/objects/Case/fields/OriginCaseGroup__c.field-meta.xml
<CustomField>
    <fullName>OriginCaseGroup__c</fullName>
    <description>Case Group Value to indicate to which Group the Case came in</description>
    <label>Origin Case Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Support_Groups</valueSetName>
    </valueSet>
</CustomField>