force-app/main/default/objects/Case/fields/PermitApplicationDetails__c.field-meta.xml
<CustomField>
    <fullName>PermitApplicationDetails__c</fullName>
    <description>Details about the Building Permit Application</description>
    <inlineHelpText>Details about the Building Permit Application</inlineHelpText>
    <label>Permit Application Details</label>
    <length>60000</length>
    <type>LongTextArea</type>
</CustomField>