force-app/main/default/objects/Case/fields/PermitDetails__c.field-meta.xml
<CustomField>
    <fullName>PermitDetails__c</fullName>
    <description>This Field is for additional inforrmation related to the Building Permit Case Handling</description>
    <inlineHelpText>Please provide additional information related to the Building Permit Process</inlineHelpText>
    <label>Permit Result Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>