force-app/main/default/objects/Case/fields/PermitPrincipalDesigner__c.field-meta.xml
<CustomField>
    <fullName>PermitPrincipalDesigner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Pääsuunnittelija</description>
    <inlineHelpText>Please fill in Principal Designer for the Case</inlineHelpText>
    <label>Principal Designer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PermitApplications</relationshipName>
    <type>Lookup</type>
</CustomField>