force-app/main/default/objects/Case/fields/PermitSiteManager__c.field-meta.xml
<CustomField>
    <fullName>PermitSiteManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Vastaava Työnjohtaja</description>
    <inlineHelpText>Fill in Responsible Site Manager for the Case</inlineHelpText>
    <label>Responsible Site Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PermitApplications1</relationshipName>
    <type>Lookup</type>
</CustomField>