force-app/main/default/objects/Case/fields/PermitStatus__c.field-meta.xml
<CustomField>
    <fullName>PermitStatus__c</fullName>
    <description>The Status of the Permit Application</description>
    <inlineHelpText>The Status of the Permit Application</inlineHelpText>
    <label>Building Permit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>