force-app/main/default/objects/Case/fields/PermitStructuralEngineer__c.field-meta.xml
<CustomField>
    <fullName>PermitStructuralEngineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Rakennesuunnittelija</description>
    <inlineHelpText>Fill in Structural Engineer for the Case</inlineHelpText>
    <label>Structural Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PermitApplications2</relationshipName>
    <type>Lookup</type>
</CustomField>