force-app/main/default/objects/Case/fields/PictureId__c.field-meta.xml
<CustomField>
    <fullName>PictureId__c</fullName>
    <description>The Id of the Picture to be Attached</description>
    <label>PictureId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>