force-app/main/default/objects/Case/fields/PictureName__c.field-meta.xml
<CustomField>
    <fullName>PictureName__c</fullName>
    <description>The Name of the File to be Attached to the Case</description>
    <label>PictureName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>