force-app/main/default/objects/Case/fields/Principal_Designer__c.field-meta.xml
<CustomField>
    <fullName>Principal_Designer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Pääsuunnittelija</description>
    <inlineHelpText>Please fill in Principal Designer for the Case</inlineHelpText>
    <label>Principal Designer OLD</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>