force-app/main/default/objects/Case/fields/Process_Class__c.field-meta.xml
<CustomField>
    <fullName>Process_Class__c</fullName>
    <description>Picklist for reclamation classification</description>
    <label>Process Class OLD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Quality_Process_Classes</valueSetName>
    </valueSet>
</CustomField>