force-app/main/default/objects/Case/fields/QualityCauseCode__c.field-meta.xml
<CustomField>
    <fullName>QualityCauseCode__c</fullName>
    <description>Picklist value for reclamation classifications</description>
    <label>Cause Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Quality_Cause_Codes</valueSetName>
    </valueSet>
</CustomField>