force-app/main/default/objects/Case/fields/QualityTargetCode__c.field-meta.xml
<CustomField>
    <fullName>QualityTargetCode__c</fullName>
    <description>Picklist field for reclamation classification</description>
    <label>Target Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>QualityProcessClass__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Lumon_Quality_Target_Codes</valueSetName>
    </valueSet>
</CustomField>