force-app/main/default/objects/Case/fields/Reclamation__c.field-meta.xml
<CustomField>
    <fullName>Reclamation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reclamation</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Opportunity.Order_type__c</field>
            <operation>equals</operation>
            <value>Reclamation</value>
        </filterItems>
        <filterItems>
            <field>Opportunity.Territory2Id</field>
            <operation>equals</operation>
            <value>Reclamation</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Cases (Reclamation)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>