force-app/main/default/objects/Case/fields/ReclamationCause__c.field-meta.xml
<CustomField>
    <fullName>ReclamationCause__c</fullName>
    <description>free text field (up to 255 characters) for reclamation classifications</description>
    <label>Reclamation Cause DELETE</label>
    <type>TextArea</type>
</CustomField>