force-app/main/default/objects/Case/fields/ReclamationCauseDescription__c.field-meta.xml
<CustomField>
    <fullName>ReclamationCauseDescription__c</fullName>
    <description>Quality event reclamation cause description</description>
    <label>Reclamation Cause Description DELETE</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>