force-app/main/default/objects/Case/fields/Requester__c.field-meta.xml
<CustomField>
    <fullName>Requester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lumon Internal User requesting Internal IT Support</description>
    <inlineHelpText>Lumon Internal User requesting Internal IT Support</inlineHelpText>
    <label>Requester DEL</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Organization_Attribute__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Internal_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>