force-app/main/default/objects/Case/fields/Responsible_Site_Manager__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Site_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Vastaava Työnjohtaja</description>
    <inlineHelpText>Fill in Responsible Site Manager for the Case</inlineHelpText>
    <label>Responsible Site Manager OLD</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>