force-app/main/default/objects/Case/fields/SLA_Country__c.field-meta.xml
<CustomField>
    <fullName>SLA_Country__c</fullName>
    <description>Create a field SLA according to the country</description>
    <formula>CASE(Owner:User.Country,
&quot;Finland&quot;,&quot;ICT_SLA_FIN&quot;,
&quot;Spain&quot;,&quot;ICT_SLA_ESP&quot;,
&quot;Canada&quot;, &quot;ICT_SLA_CAN&quot;, 
&quot;&quot;)</formula>
    <label>SLA_Country DELETE</label>
    <type>Text</type>
</CustomField>