force-app/main/default/objects/Case/fields/SlaCount__c.field-meta.xml
<CustomField>
    <fullName>SlaCount__c</fullName>
    <description>Count how many tickets were solved before the deadline</description>
    <formula>IF(
AND(
NOT(ISBLANK( CaseResolvedDate__c )),
CaseResolvedDate__c &lt;= SlaDeadline__c
),
1,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>