force-app/main/default/objects/Case/fields/SlaDeadline__c.field-meta.xml
<CustomField>
    <fullName>SlaDeadline__c</fullName>
    <formula>CASE(
     Priority ,
    &quot;Low&quot;,  CreatedDate  + 15,
    &quot;Medium&quot;, CreatedDate  + 7,
    &quot;High&quot;, CreatedDate + 3,
    NULL
)</formula>
    <label>SLA Deadline</label>
    <type>DateTime</type>
</CustomField>