force-app/main/default/objects/Case/fields/SourceEmail__c.field-meta.xml
<CustomField>
    <fullName>SourceEmail__c</fullName>
    <description>The Email Address from where the Case is Reported</description>
    <inlineHelpText>The Email Address from where the Case is Reported</inlineHelpText>
    <label>Source Email</label>
    <type>Email</type>
</CustomField>