force-app/main/default/objects/Case/fields/SourcePhone__c.field-meta.xml
<CustomField>
    <fullName>SourcePhone__c</fullName>
    <description>The Phone Number from where the Case is Reported</description>
    <inlineHelpText>The Phone Number from where the Case is Reported</inlineHelpText>
    <label>Source Phone</label>
    <type>Phone</type>
</CustomField>