force-app/main/default/objects/Case/fields/Structural_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Structural_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Rakennesuunnittelija</description>
    <inlineHelpText>Fill in Structural Engineer for the Case</inlineHelpText>
    <label>Structural Engineer DELETE</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>