force-app/main/default/objects/Case/fields/Subtype__c.field-meta.xml
<CustomField>
    <fullName>Subtype__c</fullName>
    <description>A field for specifying the reason for the quality event case.</description>
    <label>Subtype DELETE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Missing Part</fullName>
            </value>
            <value>
                <fullName>Broken Part</fullName>
            </value>
            <value>
                <fullName>Wrong Measure</fullName>
            </value>
            <value>
                <fullName>Broken products</fullName>
            </value>
            <value>
                <fullName>Missing  products</fullName>
            </value>
            <value>
                <fullName>Wrong  products</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>