force-app/main/default/objects/Case/fields/Target_Code__c.field-meta.xml
<CustomField>
    <fullName>Target_Code__c</fullName>
    <description>Picklist field for reclamation classification</description>
    <label>Target Code OLD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Quality_Target_Codes</valueSetName>
    </valueSet>
</CustomField>