force-app/main/default/objects/Case/fields/Warranty_applies__c.field-meta.xml
<CustomField>
    <fullName>Warranty_applies__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If set by the flow &quot;Account - Create Case&quot; or &quot;Mobile - Change WOLI status&quot;, then warranty is considered to be applicable and there should be no cost to the customer.</description>
    <inlineHelpText>Warranty is considered to be applicable for the case handling.</inlineHelpText>
    <label>Warranty applies OLD</label>
    <type>Checkbox</type>
</CustomField>