force-app/main/default/objects/Case/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field identifies the related Work Order for which the Reclamation Case was created. Filled in by automation.</description>
    <label>Work Order DELETE</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>