force-app/main/default/objects/Case/fields/Work_Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field identifies the related Work Order line Item for which the Reclamation Case was created so that taken images can be re-linked to Case from WOLI.</description>
    <label>Work Order Line Item OLD</label>
    <referenceTo>WorkOrderLineItem</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>