force-app/main/default/objects/Case/fields/WorkOrder__c.field-meta.xml
<CustomField>
    <fullName>WorkOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field identifies the related Work Order for which the Reclamation Case was created. Filled in by automation.</description>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Reclamations</relationshipLabel>
    <relationshipName>Reclamations</relationshipName>
    <type>Lookup</type>
</CustomField>