force-app/main/default/objects/Case/fields/WorkOrderLineItem__c.field-meta.xml
<CustomField>
    <fullName>WorkOrderLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field identifies the related Work Order line Item for which the Reclamation Case was created so that taken images can be re-linked to Case from WOLI.</description>
    <label>Work Order Line Item</label>
    <referenceTo>WorkOrderLineItem</referenceTo>
    <relationshipLabel>Reclamations</relationshipLabel>
    <relationshipName>Reclamations</relationshipName>
    <type>Lookup</type>
</CustomField>